Inserindo slick slider, alterações no js, responsivo, index.html e css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.1"></script>
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/responsivo.css">
@@ -27,7 +29,7 @@
             <i class="menu-toggle-btn fa fa-bars"></i>
             <nav class="menu">
                 <a href="#">Home</a>
-                <a href="#">Portfólio</a>
+                <a href="#">Projetos</a>
                 <a href="#">Serviços</a>
                 <a href="#">Sobre</a>
                 <a href="#">Contato</a>
@@ -56,7 +58,25 @@
                 </div>
             </article>
         </section>
-        <section class="portfolio">
+        <section class="projetos">
+            <div class="card">
+                <div class="overlay">
+                    <h2>em breve</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="overlay">
+                    <h2>em breve</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="overlay">
+                    <h2>em breve</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>
+                </div>
+            </div>
             <div class="card">
                 <div class="overlay">
                     <h2>em breve</h2>
@@ -189,6 +209,36 @@
             </div>
         </section>
     </main>
+    <footer>
+        <section class="rodape">
+            <div class="inner-width">
+                <div class="conteudoRodape">
+                    <div class="logoRodape">
+                        <svg width="70" height="80" viewBox="0 0 70 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_71_82)">
+                            <path d="M-0.012207 79.9999V0.0281208H13.7029V13.705H22.9267V-0.00817871H29.7078C29.7078 4.42842 29.9493 8.77629 29.567 13.0879C29.5026 13.8179 28.9713 14.5035 28.3274 15.1973L27.9733 15.5683C27.8123 15.7377 27.6514 15.895 27.4904 16.0644C27.3294 16.2338 27.1725 16.3951 27.0195 16.5605C26.8666 16.7259 26.7217 16.8993 26.5809 17.0768C26.5809 17.0768 26.5567 17.2381 26.6211 17.2825C29.6555 19.2991 29.8124 22.2273 29.7883 25.5305C29.6676 42.8736 29.732 60.2167 29.732 77.5598V80.0079H23.0233V20.7188H13.7954V79.9999" fill="white"/>
+                            <path d="M63.3518 68.4931V6.8485H54.2527V73.1878H69.988V79.9677H47.3992V0H69.988L70.0001 68.4931H63.3518Z" fill="white"/>
+                            <path d="M41.7933 0H35.2456V79.9677H41.7933V0Z" fill="white"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_71_82">
+                            <rect width="70" height="80" fill="white"/>
+                            </clipPath>
+                            </defs>
+                        </svg>
+                    </div>
+                    <div class="redesSociais">
+                        <a href="https://www.linkedin.com/in/kaique-oliveira-de-paula-7610a1226" target="_blank"><img src="img/logo-linkedin.svg" alt=""></a>
+                        <a href="https://github.com/KIQv" target="_blank"><img src="img/logo-github.svg" alt=""></a>
+                    </div>
+                    <div class="direitos">
+                        <p> 2022  •   Todos os direitos reservados - Desenvolvido por KIQ</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
+    <script type="text/javascript" src="js/slick.min.js"></script>
     <script type="text/javascript" src="js/animacao.js"></script>
 </body>
 </html>
